--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,5 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic" rel="stylesheet">
