--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,66 @@ html {
 }
 
 body {
-  display: flex;
-  justify-content: left;
-  align-items: flex-start;
-
   margin: 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
 }
 
 section img {
   width: 5rem;
+  margin-bottom: -3rem;
+  margin-top: -3rem;
+  display: block;
+}
+
+li {
+  padding: 2rem;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+h2 {
+  padding-right: 2rem;
+  text-align: left;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+h3,
+h4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  line-height: .3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  text-align: left;
+  white-space: nowrap;
+}
+
+p {
+  padding-left: 1rem;
+  padding-right: 1rem;
+
+  display: block;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  border-style: solid;
+  border-color: #444;
+  background-color: #444;
+  white-space: nowrap;
+  border-width: .7rem;
 }
